# demonlist-tracker-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  time_h.py
bot/: api.py  regular_check.py
bot/handlers/: big_cmds.py  small_cmds.py
bot/helpers/: split.py  time_h.py
