[project]
name = "demonlist-tracker-bot"
version = "1.0.0" # MVP
description = "Bot, which uses demonlist.org API. Can give the list, info about a demon, and changes in the list"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.23.0",
    "aiohttp>=3.13.2",
    "dotenv>=0.9.9",
]
